[gd_scene load_steps=13 format=3 uid="uid://dwjkhg54nugkq"]

[ext_resource type="Script" path="res://scripts/bob.gd" id="1_6gre0"]
[ext_resource type="Texture2D" uid="uid://cuw1lcc2psans" path="res://assets/sprites/enemy1.png" id="1_h7lmb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mkb30"]
radius = 20.0
height = 90.0

[sub_resource type="Animation" id="Animation_74umc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_18rhq"]
resource_name = "attack"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [8, 9, 8]
}

[sub_resource type="Animation" id="Animation_856cq"]
resource_name = "idle"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_cly4o"]
resource_name = "walk"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6hau3"]
_data = {
"RESET": SubResource("Animation_74umc"),
"attack": SubResource("Animation_18rhq"),
"idle": SubResource("Animation_856cq"),
"walk": SubResource("Animation_cly4o")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8a06i"]
size = Vector2(430, 210)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2h78i"]
size = Vector2(220, 200)

[sub_resource type="Gradient" id="Gradient_jqm68"]
offsets = PackedFloat32Array(0, 0.746753)
colors = PackedColorArray(0.759551, 0.86733, 0.966086, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_21ow4"]
gradient = SubResource("Gradient_jqm68")
fill = 1
fill_from = Vector2(0.509174, 0.513761)

[node name="beef" type="CharacterBody2D" groups=["Enemy"]]
position = Vector2(0, -10)
script = ExtResource("1_6gre0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -35)
shape = SubResource("CapsuleShape2D_mkb30")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -36)
texture = ExtResource("1_h7lmb")
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6hau3")
}

[node name="RayCastFloor" type="RayCast2D" parent="."]
position = Vector2(-22, 0)

[node name="RayCastWall" type="RayCast2D" parent="."]
position = Vector2(-20, -5)
target_position = Vector2(-62, 0)

[node name="RayCastWall2" type="RayCast2D" parent="."]
position = Vector2(-20, -60)
target_position = Vector2(-62, 0)

[node name="NoRecoil" type="RayCast2D" parent="."]
position = Vector2(20, -60)
target_position = Vector2(20, 0)

[node name="NoRecoil2" type="RayCast2D" parent="."]
position = Vector2(20, -5)
target_position = Vector2(20, 0)

[node name="PlayerDetectArea" type="Area2D" parent="."]
position = Vector2(-200, -40)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectArea"]
visible = false
position = Vector2(5, 0)
shape = SubResource("RectangleShape2D_8a06i")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(-100, -40)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
visible = false
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_2h78i")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -30)
scale = Vector2(2, 2)
range_layer_min = -2
texture = SubResource("GradientTexture2D_21ow4")
metadata/_edit_lock_ = true

[node name="WeaponPoint" type="Marker2D" parent="."]
position = Vector2(-16, -32)

[connection signal="body_entered" from="PlayerDetectArea" to="." method="_on_player_detect_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectArea" to="." method="_on_player_detect_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
